# meshlogic-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: go.yml  python.yml  typescript.yml
go/: README.md  go.mod
go/meshlogic/: client.go  devices.go  errors.go  events.go  patterns.go  types.go
python/: README.md  pyproject.toml
python/meshlogic/: __init__.py  client.py  exceptions.py  resources.py  types.py
typescript/: README.md  package.json  tsconfig.json
typescript/src/: client.ts  errors.ts  index.ts  types.ts
